// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Flex /> flex properties should match snapshot when alignItems is set baseline 1`] = `
<DocumentFragment>
  <div
    class="Box__StyledBox-sc-pr7b7l-0 jTBzNv Flex__StyledFlex-sc-11ryoct-0 flOSdo"
  />
</DocumentFragment>
`;

exports[`<Flex /> flex properties should match snapshot when alignItems is set center 1`] = `
<DocumentFragment>
  <div
    class="Box__StyledBox-sc-pr7b7l-0 jTBzNv Flex__StyledFlex-sc-11ryoct-0 GoDxE"
  />
</DocumentFragment>
`;

exports[`<Flex /> flex properties should match snapshot when alignItems is set flex-end 1`] = `
<DocumentFragment>
  <div
    class="Box__StyledBox-sc-pr7b7l-0 jTBzNv Flex__StyledFlex-sc-11ryoct-0 fWGjZy"
  />
</DocumentFragment>
`;

exports[`<Flex /> flex properties should match snapshot when alignItems is set flex-start 1`] = `
<DocumentFragment>
  <div
    class="Box__StyledBox-sc-pr7b7l-0 jTBzNv Flex__StyledFlex-sc-11ryoct-0 eBszyB"
  />
</DocumentFragment>
`;

exports[`<Flex /> flex properties should match snapshot when alignItems is set stretch 1`] = `
<DocumentFragment>
  <div
    class="Box__StyledBox-sc-pr7b7l-0 jTBzNv Flex__StyledFlex-sc-11ryoct-0 imdkRI"
  />
</DocumentFragment>
`;

exports[`<Flex /> flex properties should match snapshot when flexDirection is set column 1`] = `
<DocumentFragment>
  <div
    class="Box__StyledBox-sc-pr7b7l-0 jTBzNv Flex__StyledFlex-sc-11ryoct-0 fIsYUk"
  />
</DocumentFragment>
`;

exports[`<Flex /> flex properties should match snapshot when flexDirection is set column-reverse 1`] = `
<DocumentFragment>
  <div
    class="Box__StyledBox-sc-pr7b7l-0 jTBzNv Flex__StyledFlex-sc-11ryoct-0 hMYLmV"
  />
</DocumentFragment>
`;

exports[`<Flex /> flex properties should match snapshot when flexDirection is set row 1`] = `
<DocumentFragment>
  <div
    class="Box__StyledBox-sc-pr7b7l-0 jTBzNv Flex__StyledFlex-sc-11ryoct-0 imdkRI"
  />
</DocumentFragment>
`;

exports[`<Flex /> flex properties should match snapshot when flexDirection is set row-reverse 1`] = `
<DocumentFragment>
  <div
    class="Box__StyledBox-sc-pr7b7l-0 jTBzNv Flex__StyledFlex-sc-11ryoct-0 fVSmWZ"
  />
</DocumentFragment>
`;

exports[`<Flex /> flex properties should match snapshot when flexWrap is set nowrap 1`] = `
<DocumentFragment>
  <div
    class="Box__StyledBox-sc-pr7b7l-0 jTBzNv Flex__StyledFlex-sc-11ryoct-0 imdkRI"
  />
</DocumentFragment>
`;

exports[`<Flex /> flex properties should match snapshot when flexWrap is set wrap 1`] = `
<DocumentFragment>
  <div
    class="Box__StyledBox-sc-pr7b7l-0 jTBzNv Flex__StyledFlex-sc-11ryoct-0 KBLIN"
  />
</DocumentFragment>
`;

exports[`<Flex /> flex properties should match snapshot when flexWrap is set wrap-reverse 1`] = `
<DocumentFragment>
  <div
    class="Box__StyledBox-sc-pr7b7l-0 jTBzNv Flex__StyledFlex-sc-11ryoct-0 fywGAQ"
  />
</DocumentFragment>
`;

exports[`<Flex /> flex properties should match snapshot when justifyContent is set center 1`] = `
<DocumentFragment>
  <div
    class="Box__StyledBox-sc-pr7b7l-0 jTBzNv Flex__StyledFlex-sc-11ryoct-0 UcukN"
  />
</DocumentFragment>
`;

exports[`<Flex /> flex properties should match snapshot when justifyContent is set flex-end 1`] = `
<DocumentFragment>
  <div
    class="Box__StyledBox-sc-pr7b7l-0 jTBzNv Flex__StyledFlex-sc-11ryoct-0 kVxOxf"
  />
</DocumentFragment>
`;

exports[`<Flex /> flex properties should match snapshot when justifyContent is set flex-start 1`] = `
<DocumentFragment>
  <div
    class="Box__StyledBox-sc-pr7b7l-0 jTBzNv Flex__StyledFlex-sc-11ryoct-0 imdkRI"
  />
</DocumentFragment>
`;

exports[`<Flex /> flex properties should match snapshot when justifyContent is set space-around 1`] = `
<DocumentFragment>
  <div
    class="Box__StyledBox-sc-pr7b7l-0 jTBzNv Flex__StyledFlex-sc-11ryoct-0 ewjidY"
  />
</DocumentFragment>
`;

exports[`<Flex /> flex properties should match snapshot when justifyContent is set space-between 1`] = `
<DocumentFragment>
  <div
    class="Box__StyledBox-sc-pr7b7l-0 jTBzNv Flex__StyledFlex-sc-11ryoct-0 gjlOvJ"
  />
</DocumentFragment>
`;

exports[`<Flex /> spacing properties should match snapshot when all margin directions are set 1`] = `
<DocumentFragment>
  <div
    class="Box__StyledBox-sc-pr7b7l-0 cTVvps Flex__StyledFlex-sc-11ryoct-0 imdkRI"
  />
</DocumentFragment>
`;

exports[`<Flex /> spacing properties should match snapshot when all padding directions are set 1`] = `
<DocumentFragment>
  <div
    class="Box__StyledBox-sc-pr7b7l-0 kIRRBI Flex__StyledFlex-sc-11ryoct-0 imdkRI"
  />
</DocumentFragment>
`;

exports[`<Flex /> spacing properties should match snapshot when margin is set 1`] = `
<DocumentFragment>
  <div
    class="Box__StyledBox-sc-pr7b7l-0 cQbIpy Flex__StyledFlex-sc-11ryoct-0 imdkRI"
  />
</DocumentFragment>
`;

exports[`<Flex /> spacing properties should match snapshot when padding is set 1`] = `
<DocumentFragment>
  <div
    class="Box__StyledBox-sc-pr7b7l-0 eumCBp Flex__StyledFlex-sc-11ryoct-0 imdkRI"
  />
</DocumentFragment>
`;

exports[`<Flex /> spacing properties should match snapshot when responsive margin is set 1`] = `
<DocumentFragment>
  <div
    class="Box__StyledBox-sc-pr7b7l-0 jbzyAA Flex__StyledFlex-sc-11ryoct-0 imdkRI"
  />
</DocumentFragment>
`;

exports[`<Flex /> spacing properties should match snapshot when responsive padding is set 1`] = `
<DocumentFragment>
  <div
    class="Box__StyledBox-sc-pr7b7l-0 cUCRhM Flex__StyledFlex-sc-11ryoct-0 imdkRI"
  />
</DocumentFragment>
`;
